--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Luis Middleton",
   "license": "MIT",
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.52.11",
     "@rslib/core": "^0.12.4",
     "typescript": "^5.0.0"
   }
