Add Task.catch test, restrict coverage to src, add coverage script and .gitignore entry

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     }
   },
   "scripts": {
-    "test": "vitest",
+  "test": "vitest",
+  "coverage": "vitest --coverage",
     "build": "rslib build",
     "build:watch": "rslib build --watch"
   },
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@microsoft/api-extractor": "^7.52.11",
     "@rslib/core": "^0.12.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "typescript": "^5.0.0",
     "vitest": "^3.2.4"
   }
