Update package.json, Task.test.ts, and tsconfig.json with latest changes

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "vitest",
     "coverage": "vitest --coverage",
     "build": "rslib build",
-    "build:doc": "typedoc",
+    "build:doc": "typedoc ./src/index.ts",
     "build:watch": "rslib build --watch"
   },
   "keywords": [],
