--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "test": "vitest",
+    "ci:publish": "pnpm publish -r --access=public",
     "coverage": "vitest --coverage",
     "build": "rslib build",
     "build:doc": "typedoc",
@@ -25,6 +26,7 @@
   "author": "Luis Middleton",
   "license": "MIT",
   "devDependencies": {
+    "@changesets/cli": "^2.29.6",
     "@microsoft/api-extractor": "^7.52.11",
     "@rslib/core": "^0.12.4",
     "@vitest/coverage-v8": "^3.2.4",
