--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -18,6 +18,8 @@ jobs:
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
+        with:
+          version: 8.9.0
 
       - name: Setup node.js
         uses: actions/setup-node@v4
