--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@luism/task",
+  "name": "@luism/task-ts",
   "version": "0.1.0",
   "description": "Library for managing deferred asynchronous operations",
   "main": "./dist/cjs/index.js",
